# Drawing-Tool

./: README.md  build.bat
project/src/: CMakeLists.txt  filemanager.cpp  filemanager.h  image.qrc  kcanvas.cpp  kcanvas.h  kcircle.cpp  kcircle.h  kglobaldata.cpp  kglobaldata.h  kline.cpp  kline.h  kpen.cpp  kpen.h  kpolygon.cpp  kpolygon.h  kpolygonpanel.cpp  kpolygonpanel.h  kpropertybox.cpp  kpropertybox.h  krect.cpp  krect.h  kshape.cpp  kshape.h  kshapefactory.cpp  kshapefactory.h  kstylepanel.cpp  kstylepanel.h  ktab.cpp  ktab.h  ktabitem.cpp  ktabitem.h  ktext.cpp  ktext.h  ktoolbar.cpp  ktoolbar.h  ktoolbutton.cpp  ktoolbutton.h  ktopmenu.cpp  ktopmenu.h  (+5 more)
